<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Animations</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scale">Scale</string>
    <string name="translate">Trans</string>
    <string name="rotate">Rotate</string>
    <string name="alpha">Alpha</string>
    <string name="stop">Stop Animation</string>

</resources>
